--- a/OwinIdentitySimpleInjector.DAL/App.config
+++ b/OwinIdentitySimpleInjector.DAL/App.config
@@ -10,4 +10,4 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-<connectionStrings><add name="OwinIdentitySimpleInjectorDBEntities" connectionString="metadata=res://*/OwinIdentity.csdl|res://*/OwinIdentity.ssdl|res://*/OwinIdentity.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=FILIP\SQLEXPRESS;initial catalog=OwinIdentitySimpleInjectorDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
+<connectionStrings><add name="OwinIdentitySimpleInjectorDBEntities" connectionString="metadata=res://*/OwinIdentity.csdl|res://*/OwinIdentity.ssdl|res://*/OwinIdentity.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=OwinIdentitySimpleInjectorDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
