--- a/OwinIdentitySimpleInjector/Web.config
+++ b/OwinIdentitySimpleInjector/Web.config
@@ -9,8 +9,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=FILIP\SQLEXPRESS;Initial Catalog=OwinIdentitySimpleInjectorDB;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="OwinIdentitySimpleInjectorDBEntities" connectionString="metadata=res://*/OwinIdentity.csdl|res://*/OwinIdentity.ssdl|res://*/OwinIdentity.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=FILIP\SQLEXPRESS;initial catalog=OwinIdentitySimpleInjectorDBEntities;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="DefaultConnection" connectionString="Data Source=.;Initial Catalog=OwinIdentitySimpleInjectorDB;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="OwinIdentitySimpleInjectorDBEntities" connectionString="metadata=res://*/OwinIdentity.csdl|res://*/OwinIdentity.ssdl|res://*/OwinIdentity.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=OwinIdentitySimpleInjectorDBEntities;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
